# deployed_nlp_answering_system

./: .dockerignore  .gitignore  Dockerfile  README.md  assignment.md  eda.ipynb  local_query.py  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
config/: config.yaml
prompts/: system_prompt.txt  user_prompt.txt
run_one_time/: get_known_names.py  get_messages.py  pinecone_upload.py
src/: model_loader.py  utils.py
src/rag/: __init__.py  retriever.py  service.py
